[package]
name = "brainiac_22ccb748d608358e"
version = "0.1.0"
authors = ["Austin Jay Ives <austin.jay.ives@gmail.com>"]
edition = "2018"
description = "An implementation of the brainfuck esoteric computer language"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
